# doc_writter

./: .gitignore  README.md  pyproject.toml
doc_writer/: __init__.py  base_writer.py  chart_utils.py  flowchart_utils.py  html_writer.py  image_utils.py  template_loader.py  word_writer.py
doc_writer/templates/combined/: chart_section.json  content_with_list.json  cover_section.json  data_table_section.json  flowchart_section.json  hero_section.json  two_column_text.json
doc_writer/templates/pages/: cover_page.json  standard_report_page.json
doc_writer/templates/singular/: bullet_list.json  callout.json  chart.json  flowchart.json  image.json  paragraph.json  separator.json  table.json  title.json
examples/: example_usage.py
