[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "doc-writer"
version = "0.1.0"
description = "Génération de documentations Word et HTML à partir de templates JSON personnalisés"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
doc_writer = ["templates/**/*.json"]
